// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`consumer-c/components/products/ProductsGrid integration with filters should render ProductsGrid component with only available products 1`] = `
<body>
  <div>
    <h2>
      Products
    </h2>
    <ul>
      <li>
        <div>
          <img
            src="http://placeimg.com/640/480"
          />
          <h2>
            Intelligent Metal Towels
          </h2>
          <p>
            Ergonomic executive chair upholstered in bonded black leather and PVC padded seat and back for all-day comfort and support
          </p>
          <p
            style="font-weight: bold;"
          >
            5.6
          </p>
        </div>
      </li>
    </ul>
  </div>
</body>
`;

exports[`consumer-c/components/products/ProductsGrid integration without filters should render ProductsGrid component with all products 1`] = `
<body>
  <div>
    <h2>
      Products
    </h2>
    <ul>
      <li>
        <div>
          <img
            src="http://placeimg.com/640/480"
          />
          <h2>
            Small Granite Table
          </h2>
          <p>
            Ergonomic executive chair upholstered in bonded black leather and PVC padded seat and back for all-day comfort and support
          </p>
          <p
            style="font-weight: bold;"
          >
            77.3
          </p>
        </div>
      </li>
      <li>
        <div>
          <img
            src="http://placeimg.com/640/480"
          />
          <h2>
            Handcrafted Granite Chicken
          </h2>
          <p>
            The Apollotech B340 is an affordable wireless mouse with reliable connectivity, 12 months battery life and modern design
          </p>
          <p
            style="font-weight: bold;"
          >
            32.8
          </p>
        </div>
      </li>
      <li>
        <div>
          <img
            src="http://placeimg.com/640/480"
          />
          <h2>
            Rustic Steel Chair
          </h2>
          <p>
            Carbonite web goalkeeper gloves are ergonomically designed to give easy fit
          </p>
          <p
            style="font-weight: bold;"
          >
            91.3
          </p>
        </div>
      </li>
      <li>
        <div>
          <img
            src="http://placeimg.com/640/480"
          />
          <h2>
            Awesome Plastic Shoes
          </h2>
          <p>
            New ABC 13 9370, 13.3, 5th Gen CoreA5-8250U, 8GB RAM, 256GB SSD, power UHD Graphics, OS 10 Home, OS Office A & J 2016
          </p>
          <p
            style="font-weight: bold;"
          >
            1.2
          </p>
        </div>
      </li>
      <li>
        <div>
          <img
            src="http://placeimg.com/640/480"
          />
          <h2>
            Fantastic Wooden Mouse
          </h2>
          <p>
            The Football Is Good For Training And Recreational Purposes
          </p>
          <p
            style="font-weight: bold;"
          >
            52.9
          </p>
        </div>
      </li>
      <li>
        <div>
          <img
            src="http://placeimg.com/640/480"
          />
          <h2>
            Ergonomic Frozen Sausages
          </h2>
          <p>
            The beautiful range of Apple Naturalé that has an exciting mix of natural ingredients. With the Goodness of 100% Natural Ingredients
          </p>
          <p
            style="font-weight: bold;"
          >
            15.7
          </p>
        </div>
      </li>
      <li>
        <div>
          <img
            src="http://placeimg.com/640/480"
          />
          <h2>
            Intelligent Metal Towels
          </h2>
          <p>
            Ergonomic executive chair upholstered in bonded black leather and PVC padded seat and back for all-day comfort and support
          </p>
          <p
            style="font-weight: bold;"
          >
            5.6
          </p>
        </div>
      </li>
      <li>
        <div>
          <img
            src="http://placeimg.com/640/480"
          />
          <h2>
            Incredible Cotton Fish
          </h2>
          <p>
            Andy shoes are designed to keeping in mind durability as well as trends, the most stylish range of shoes & sandals
          </p>
          <p
            style="font-weight: bold;"
          >
            19.7
          </p>
        </div>
      </li>
      <li>
        <div>
          <img
            src="http://placeimg.com/640/480"
          />
          <h2>
            Fantastic Frozen Car
          </h2>
          <p>
            New range of formal shirts are designed keeping you in mind. With fits and styling that will make you stand apart
          </p>
          <p
            style="font-weight: bold;"
          >
            54.6
          </p>
        </div>
      </li>
      <li>
        <div>
          <img
            src="http://placeimg.com/640/480"
          />
          <h2>
            Refined Cotton Fish
          </h2>
          <p>
            Boston's most advanced compression wear technology increases muscle oxygenation, stabilizes active muscles
          </p>
          <p
            style="font-weight: bold;"
          >
            92.5
          </p>
        </div>
      </li>
    </ul>
  </div>
</body>
`;
